--- a/src/app/features/auth/login/login.html
+++ b/src/app/features/auth/login/login.html
@@ -9,12 +9,14 @@
     <form (ngSubmit)="login()" #loginForm="ngForm" class="space-y-6">
       <div class="relative">
         <input type="email" id="email" name="email" [(ngModel)]="email" required placeholder="Correo Electrónico"
-          class="w-full px-4 py-3 pl-10 border-2 border-shuar-dark-green rounded-lg shadow-sm focus:ring-2 focus:ring-shuar-light-green focus:border-transparent transition duration-300 ease-in-out">
+          class="w-full px-4 py-3 pl-10 border-2 rounded-lg shadow-sm focus:ring-2 focus:border-transparent transition duration-300 ease-in-out"
+          [ngClass]="{'border-shuar-dark-green': !loginError, 'border-red-500': loginError}">
         <i class="fas fa-envelope absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
       </div>
       <div class="relative">
         <input [type]="passwordFieldType" id="password" name="password" [(ngModel)]="password" required minlength="6" placeholder="Contraseña"
-          class="w-full px-4 py-3 pl-10 border-2 border-shuar-dark-green rounded-lg shadow-sm focus:ring-2 focus:ring-shuar-light-green focus:border-transparent transition duration-300 ease-in-out" #passwordInput="ngModel">
+          class="w-full px-4 py-3 pl-10 border-2 rounded-lg shadow-sm focus:ring-2 focus:border-transparent transition duration-300 ease-in-out"
+          [ngClass]="{'border-shuar-dark-green': !loginError, 'border-red-500': loginError}" #passwordInput="ngModel">
         <i class="fas fa-lock absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
         <i class="fas absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-400 cursor-pointer"
           [ngClass]="{'fa-eye': passwordFieldType === 'password', 'fa-eye-slash': passwordFieldType === 'text'}"
@@ -30,12 +32,18 @@
           </div>
         }
       </div>
+      @if (loginError) {
+        <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
+          <strong class="font-bold">Error:</strong>
+          <span class="block sm:inline">{{ loginError }}</span>
+        </div>
+      }
       <div class="text-right flex items-center justify-center">
         <a href="#" class="font-bold text-shuar-dark-green hover:underline transition duration-300 ease-in-out hover:text-shuar-medium-green">¿Olvidaste tu contraseña?</a>
       </div>
       <button type="submit" [disabled]="!loginForm.form.valid"
-              class="w-full px-4 py-3 font-bold text-white bg-shuar-dark-green rounded-lg shadow-md hover:bg-shuar-light-green 
-                     focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-shuar-dark-green 
+              class="w-full px-4 py-3 font-bold text-black bg-shuar-dark-green rounded-lg shadow-md hover:bg-shuar-light-green
+                     focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-shuar-dark-green
                      transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102" >
         <i class="fas fa-sign-in-alt mr-2"></i>
         Iniciar sesión
@@ -48,9 +56,9 @@
       <hr class="flex-grow border-gray-300">
     </div>
 
-    <button class="w-full px-4 py-3 font-bold text-shuar-soft-black bg-gray-100 border border-gray-300 rounded-lg shadow-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 flex items-center justify-center 
+    <button (click)="loginWithGoogle()" class="w-full px-4 py-3 font-bold text-shuar-soft-black bg-gray-100 border border-gray-300 rounded-lg shadow-md hover:bg-gray-200 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 flex items-center justify-center
                    transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-102">
-      <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" alt="Google Logo" class="h-5 w-5 mr-2">
+      <img src="/img/google.png" alt="Google Logo" class="h-5 w-5 mr-2">
       Iniciar sesión con Google
     </button>
 
@@ -62,5 +70,6 @@
     </p>
   </div>
 </div>
+
 
 
