--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
 @use "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Lato:wght@400;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
